# MuTechWaLBerla

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  TestStdFilesystem  monitor_ssd.sh  pystencils-2.0-adoption.md
.fleet/: run.json
apps/: CMakeLists.txt  vmstat_log.txt
apps/Sparse/: CMakeLists.txt
apps/bam/: AllInOne.cpp  BenchmarkExample.cpp  BoxParticles_Cohesion.cpp  BucketCohesion.cpp  BucketGeometry.h  CMakeLists.txt  CohBucket_act.cpp  CohBucket_settling.cpp  Cohesion 2.cfg  CohesionExperimentNormal.cpp  Four_Adding_Box_Pierre.cpp  One_Particles_Settling_NO_Water_Pierre.cpp  ParticleBed_Water.cpp  Three_Adding_Bucket_Pierre.cpp  TwoSpheresOnBox.cpp  TwoSpheresOnBoxWithWater.cpp  TwoSpheresOnOne.cpp  Two_Particles_and_Water_Pierre.cpp  Utility.h  Utility_water.h  newSelector.h
apps/benchmarks/: CMakeLists.txt
apps/showcases/Piping/: CMakeLists.txt  Piping.cpp  Piping.prm  SettlingSpheres.cpp  SettlingSpheres.prm  Utility.h
apps/showcases/Piping/setups/: Piping_Fukumoto.prm  Piping_INRAE.prm  Piping_INRAE_d10.prm  Piping_INRAE_d20.prm  SettlingSpheres_Fukumoto.prm  SettlingSpheres_INRAE.prm
apps/showcases/Piping/utility/: BoundaryCondition.h  ParticleSelectors.h  ParticleUtility.h  PipingEvaluators.h
cmake/: FindCGAL.cmake  FindVHACD.cmake  TestCUDACompatibility.cu  waLBerlaHelperFunctions.cmake
doc/: setup.dox
python/: mesa_pd.py  pystencils2.0-requirements.txt
src/: CMakeLists.txt  waLBerlaDefinitions.in.h
src/blockforest/: CMakeLists.txt  PhantomBlock.h
src/blockforest/communication/: NonUniformBufferedScheme.h  UniformBufferedScheme.h
src/blockforest/python/: CommunicationExport.h  CommunicationExport.impl.h  Exports.cpp  Exports.h
utilities/: refactorCMake.py
(+846 files in other folders)
